fix flexbox wrapping in safari

--- a/main.css
+++ b/main.css
@@ -924,6 +924,7 @@ p.lead {
   align-items: center;
   -moz-box-wrap: wrap;
   -webkit-box-wrap: wrap;
+  -webkit-flex-wrap: wrap;
   -ms-flexbox-wrap: wrap;
   flex-wrap: wrap; }
   .grid-list > * {
